--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<meta property="og:description" content="Play minecraft 1.12 in your browser" />
 		<meta property="og:image" content="favicon.png" />
 		<link type="image/png" rel="shortcut icon" href="favicon.png" />
+		<meta http-equiv="origin-trial" content="An4IgurVo91AMlWiUvV7UekygrqVa874PonL4gm+04Y3hx7PViYPZEnzwFtzSB83175FDpJuYkM14cziIJ6PrwIAAAB7eyJvcmlnaW4iOiJodHRwczovL3NwZWVkc2xpY2VyLmRldjo0NDMiLCJmZWF0dXJlIjoiV2ViQXNzZW1ibHlKU1Byb21pc2VJbnRlZ3JhdGlvbiIsImV4cGlyeSI6MTc1MzE0MjQwMCwiaXNTdWJkb21haW4iOnRydWV9">
 		<script type="text/javascript" src="bootstrap.js?v=12"></script>
 		<script type="text/javascript">
 			"use strict";
